--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,49 +1,50 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
-  --white: #fff;
-  --background: #F2F3F5;
-  --gray-line: #DCDDE0;
-  --text: #666666;
-  --text-highlight: #B3B9FF;
-  --title: #2E384D;
-  --red: #E83F5B;
-  --green: #4CD62B;
-  --blue: #5965E0;
-  --blue-dark: #4953B8;
-  --blue-twitter: #2aa9E0;
+    --white: #fff;
+    --background: #f2f3f5;
+    --gray-line: #DCDDE0;
+    --text: #666666;
+    --text-highlight: #B3B9FF;
+    --title: #2E384D;
+    --red: #E83F5B;
+    --green: #4CD62B;
+    --blue: #5965E0;
+    --blue-dark: #4953B8;
+    --blue-twitter: #2AA9E0;
 }
 
-@media(max-width: 1080px) {
-  html {
-    font-size: 93.75%;
-  }
+@media (max-width: 1000px) {
+    html {
+        font-size: 93.75%;
+    }
 }
 
-@media(max-width: 720px) {
-  html {
-    font-size: 87.5%;
-  }
+@media (max-width: 720px) {
+    html {
+        font-size: 87.5%;
+    }
 }
 
 body {
-  background: var(--background);
-  color: var(--text);
+    background-color: var(--background);
+    color: var(--text);
+    font-family: 'Inter', sans-serif;
 }
 
 body, input, textarea, button {
-  font: 400 16px 'Inter', sans-serif;
+    font: 400, 16px, 'Inter', sans-serif;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    color: inherit;
+    text-decoration: none;
 }
